--- a/index.html
+++ b/index.html
@@ -52,23 +52,48 @@
         <section class="section-2">
             <div class="container">
                 <h2 class="visually-hidden">Features</h2>
-                <ul class="features-list">
+                <div class="features-list">
                     <li class="feature-item">
+                        <div class="icon-container-two">
+                      <svg class="icon-section-two" width="64px" height="64px">
+                        <use href="../svg/sprite.svg#icon-strategy">
+                        </use>
+                      </svg>
+                    </div>
                         <h3 class="feature-title">Strategy</h3>
                         <p class="feature-text">Our goal is to identify the business problem to walk away with the perfect and
                             creative solution.</p>
                     </li>
-                    <li class="feature-item">
+
+                        <li class="feature-item">
+                            <div class="icon-container-two">
+                                <svg class="icon-section-two" width="64px" height="64px">
+                                    <use href="../svg/sprite.svg#icon-punctuality">
+                                    </use>
+                                </svg>
+                            </div>
                         <h3 class="feature-title">Punctuality</h3>
                         <p class="feature-text">Bring the key message to the brand's audience for the best price within the
                             shortest possible time.</p>
                     </li>
                     <li class="feature-item">
+                        <div class="icon-container-two">
+                            <svg class="icon-section-two" width="64px" height="64px">
+                                <use href="../svg/sprite.svg#icon-diligence">
+                                </use>
+                            </svg>
+                        </div>
                         <h3 class="feature-title">Diligence</h3>
                         <p class="feature-text">Research and confirm brands with the strongest digital growth opportunities and
                             minimize risk.</p>
                     </li>
                     <li class="feature-item">
+                        <div class="icon-container-two">
+                            <svg class="icon-section-two" width="64px" height="64px">
+                                <use href="../svg/sprite.svg#icon-technologies">
+                                </use>
+                            </svg>
+                        </div>
                         <h3 class="feature-title">Technologies</h3>
                         <p class="feature-text">Design practice focused on digital experiences. We bring forth a deep passion
                             for problem-solving.</p>
