--- a/index.html
+++ b/index.html
@@ -113,6 +113,36 @@
                     <div class="team-info">
                         <h3 class="team-name">Mark Guerrero</h3>
                         <p class="team-role">Product Designer</p>
+                           <ul class="social-items">
+                               <li>
+                                <a>
+                                    <svg class="icon-section-thee" width="40px" height="40px">
+                                        <use href="./svg/sprite.svg#icon-instagram"></use>
+                                    </svg>
+                                </a>
+                                </li>
+                                <li>
+                                <a>
+                                    <svg class="icon-section-thee" width="40px" height="40px">
+                                        <use href="./svg/sprite.svg#icon-twitter"></use>
+                                    </svg>
+                                </a>
+                                </li>
+                                <li>
+                                <a>
+                                    <svg class="icon-section-thee" width="40px" height="40px">
+                                        <use href="./svg/sprite.svg#icon-facebook"></use>
+                                    </svg>
+                                </a>
+                                </li>
+                                 <li>
+                                <a>
+                                    <svg class="icon-section-thee" width="40px" height="40px">
+                                        <use href="./svg/sprite.svg#icon-linkedin"></use>
+                                    </svg>
+                                </a>
+                              </li>
+                           </ul>
                     </div>
                 </li>
                 <li class="team-item">
