--- a/index.html
+++ b/index.html
@@ -150,6 +150,36 @@
                     <div class="team-info">
                         <h3 class="team-name">Tom Ford</h3>
                         <p class="team-role">Frontend Developer</p>
+                        <ul class="social-items">
+                            <li>
+                                <a>
+                                    <svg class="icon-section-thee" width="40px" height="40px">
+                                        <use href="./svg/sprite.svg#icon-instagram"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li>
+                                <a>
+                                    <svg class="icon-section-thee" width="40px" height="40px">
+                                        <use href="./svg/sprite.svg#icon-twitter"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li>
+                                <a>
+                                    <svg class="icon-section-thee" width="40px" height="40px">
+                                        <use href="./svg/sprite.svg#icon-facebook"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li>
+                                <a>
+                                    <svg class="icon-section-thee" width="40px" height="40px">
+                                        <use href="./svg/sprite.svg#icon-linkedin"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                        </ul>
                     </div>
                 </li>
                 <li class="team-item">
@@ -157,13 +187,74 @@
                     <div class="team-info">
                         <h3 class="team-name">Camila Garcia</h3>
                         <p class="team-role">Marketing</p>
+                        <ul class="social-items">
+                            <li>
+                                <a>
+                                    <svg class="icon-section-thee" width="40px" height="40px">
+                                        <use href="./svg/sprite.svg#icon-instagram"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li>
+                                <a>
+                                    <svg class="icon-section-thee" width="40px" height="40px">
+                                        <use href="./svg/sprite.svg#icon-twitter"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li>
+                                <a>
+                                    <svg class="icon-section-thee" width="40px" height="40px">
+                                        <use href="./svg/sprite.svg#icon-facebook"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li>
+                                <a>
+                                    <svg class="icon-section-thee" width="40px" height="40px">
+                                        <use href="./svg/sprite.svg#icon-linkedin"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                        </ul>
                     </div>
                 </li>
                 <li class="team-item">
                     <img src="./images/pic4.jpg" alt="Daniel Wilson" width="264" class="team-photo">
                     <div class="team-info">
                         <h3 class="team-name">Daniel Wilson</h3>
-                        <p class="team-role">UI Designer</p>
+                        <p class="team-role">UI Designer
+                            <ul class="social-items">
+                                <li>
+                                    <a>
+                                        <svg class="icon-section-thee" width="40px" height="40px">
+                                            <use href="./svg/sprite.svg#icon-instagram"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a>
+                                        <svg class="icon-section-thee" width="40px" height="40px">
+                                            <use href="./svg/sprite.svg#icon-twitter"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a>
+                                        <svg class="icon-section-thee" width="40px" height="40px">
+                                            <use href="./svg/sprite.svg#icon-facebook"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a>
+                                        <svg class="icon-section-thee" width="40px" height="40px">
+                                            <use href="./svg/sprite.svg#icon-linkedin"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
+                        </p>
                     </div>
                 </li>
             </ul>
