--- a/index.html
+++ b/index.html
@@ -145,11 +145,12 @@
                            </ul>
                     </div>
                 </li>
-                <li class="team-item">
+                         
+                  <li class="team-item">
                     <img src="./images/pic2.jpg" alt="Tom Ford" width="264" class="team-photo">
                     <div class="team-info">
                         <h3 class="team-name">Tom Ford</h3>
-                        <p class="team-role">Frontend Developer</p>
+                         <p class="team-role">Frontend Developer</p>
                         <ul class="social-items">
                             <li>
                                 <a>
@@ -223,7 +224,7 @@
                     <img src="./images/pic4.jpg" alt="Daniel Wilson" width="264" class="team-photo">
                     <div class="team-info">
                         <h3 class="team-name">Daniel Wilson</h3>
-                        <p class="team-role">UI Designer
+                        <p class="team-role">UI Designer</p>
                             <ul class="social-items">
                                 <li>
                                     <a>
@@ -254,7 +255,7 @@
                                     </a>
                                 </li>
                             </ul>
-                        </p>
+                        
                     </div>
                 </li>
             </ul>
