--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     <li class="feature-item">
                         <div class="icon-container-two">
                       <svg class="icon-section-two" width="64px" height="64px">
-                        <use href="../svg/sprite.svg#icon-strategy">
+                        <use href="./svg/sprite.svg#icon-strategy">
                         </use>
                       </svg>
                     </div>
