--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                         <li class="feature-item">
                             <div class="icon-container-two">
                                 <svg class="icon-section-two" width="64px" height="64px">
-                                    <use href="../svg/sprite.svg#icon-punctuality">
+                                    <use href="./svg/sprite.svg#icon-punctuality">
                                     </use>
                                 </svg>
                             </div>
@@ -79,7 +79,7 @@
                     <li class="feature-item">
                         <div class="icon-container-two">
                             <svg class="icon-section-two" width="64px" height="64px">
-                                <use href="../svg/sprite.svg#icon-diligence">
+                                <use href="./svg/sprite.svg#icon-diligence">
                                 </use>
                             </svg>
                         </div>
@@ -90,7 +90,7 @@
                     <li class="feature-item">
                         <div class="icon-container-two">
                             <svg class="icon-section-two" width="64px" height="64px">
-                                <use href="../svg/sprite.svg#icon-technologies">
+                                <use href="./svg/sprite.svg#icon-technologies">
                                 </use>
                             </svg>
                         </div>
