--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     <li class="feature-item">
                         <div class="icon-container-two">
                       <svg class="icon-section-two" width="64px" height="64px">
-                        <use href="./svg/sprite.svg#icon-strategy">
+                        <use href="./svg/icons.svg#icon-strategy">
                         </use>
                       </svg>
                     </div>
@@ -68,7 +68,7 @@
                         <li class="feature-item">
                             <div class="icon-container-two">
                                 <svg class="icon-section-two" width="64px" height="64px">
-                                    <use href="./svg/sprite.svg#icon-punctuality">
+                                    <use href="./svg/icons.svg#icon-punctuality">
                                     </use>
                                 </svg>
                             </div>
@@ -79,7 +79,7 @@
                     <li class="feature-item">
                         <div class="icon-container-two">
                             <svg class="icon-section-two" width="64px" height="64px">
-                                <use href="./svg/sprite.svg#icon-diligence">
+                                <use href="./svg/icons.svg#icon-diligence">
                                 </use>
                             </svg>
                         </div>
@@ -90,7 +90,7 @@
                     <li class="feature-item">
                         <div class="icon-container-two">
                             <svg class="icon-section-two" width="64px" height="64px">
-                                <use href="./svg/sprite.svg#icon-technologies">
+                                <use href="./svg/icons.svg#icon-technologies">
                                 </use>
                             </svg>
                         </div>
@@ -117,28 +117,28 @@
                                <li>
                                 <a>
                                     <svg class="icon-section-thee" width="40px" height="40px">
-                                        <use href="./svg/sprite.svg#icon-instagram"></use>
+                                        <use href="./svg/icons.svg#icon-instagram"></use>
                                     </svg>
                                 </a>
                                 </li>
                                 <li>
                                 <a>
                                     <svg class="icon-section-thee" width="40px" height="40px">
-                                        <use href="./svg/sprite.svg#icon-twitter"></use>
+                                        <use href="./svg/icons.svg#icon-twitter"></use>
                                     </svg>
                                 </a>
                                 </li>
                                 <li>
                                 <a>
                                     <svg class="icon-section-thee" width="40px" height="40px">
-                                        <use href="./svg/sprite.svg#icon-facebook"></use>
+                                        <use href="./svg/icons.svg#icon-facebook"></use>
                                     </svg>
                                 </a>
                                 </li>
                                  <li>
                                 <a>
                                     <svg class="icon-section-thee" width="40px" height="40px">
-                                        <use href="./svg/sprite.svg#icon-linkedin"></use>
+                                        <use href="./svg/icons.svg#icon-linkedin"></use>
                                     </svg>
                                 </a>
                               </li>
@@ -155,28 +155,28 @@
                             <li>
                                 <a>
                                     <svg class="icon-section-thee" width="40px" height="40px">
-                                        <use href="./svg/sprite.svg#icon-instagram"></use>
+                                        <use href="./svg/icons.svg#icon-instagram"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li>
                                 <a>
                                     <svg class="icon-section-thee" width="40px" height="40px">
-                                        <use href="./svg/sprite.svg#icon-twitter"></use>
+                                        <use href="./svg/icons.svg#icon-twitter"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li>
                                 <a>
                                     <svg class="icon-section-thee" width="40px" height="40px">
-                                        <use href="./svg/sprite.svg#icon-facebook"></use>
+                                        <use href="./svg/icons.svg#icon-facebook"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li>
                                 <a>
                                     <svg class="icon-section-thee" width="40px" height="40px">
-                                        <use href="./svg/sprite.svg#icon-linkedin"></use>
+                                        <use href="./svg/icons.svg#icon-linkedin"></use>
                                     </svg>
                                 </a>
                             </li>
@@ -192,28 +192,28 @@
                             <li>
                                 <a>
                                     <svg class="icon-section-thee" width="40px" height="40px">
-                                        <use href="./svg/sprite.svg#icon-instagram"></use>
+                                        <use href="./svg/icons.svg#icon-instagram"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li>
                                 <a>
                                     <svg class="icon-section-thee" width="40px" height="40px">
-                                        <use href="./svg/sprite.svg#icon-twitter"></use>
+                                        <use href="./svg/icons.svg#icon-twitter"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li>
                                 <a>
                                     <svg class="icon-section-thee" width="40px" height="40px">
-                                        <use href="./svg/sprite.svg#icon-facebook"></use>
+                                        <use href="./svg/icons.svg#icon-facebook"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li>
                                 <a>
                                     <svg class="icon-section-thee" width="40px" height="40px">
-                                        <use href="./svg/sprite.svg#icon-linkedin"></use>
+                                        <use href="./svg/icons.svg#icon-linkedin"></use>
                                     </svg>
                                 </a>
                             </li>
@@ -229,28 +229,28 @@
                                 <li>
                                     <a>
                                         <svg class="icon-section-thee" width="40px" height="40px">
-                                            <use href="./svg/sprite.svg#icon-instagram"></use>
+                                            <use href="./svg/icons.svg#icon-instagram"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li>
                                     <a>
                                         <svg class="icon-section-thee" width="40px" height="40px">
-                                            <use href="./svg/sprite.svg#icon-twitter"></use>
+                                            <use href="./svg/icons.svg#icon-twitter"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li>
                                     <a>
                                         <svg class="icon-section-thee" width="40px" height="40px">
-                                            <use href="./svg/sprite.svg#icon-facebook"></use>
+                                            <use href="./svg/icons.svg#icon-facebook"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li>
                                     <a>
                                         <svg class="icon-section-thee" width="40px" height="40px">
-                                            <use href="./svg/sprite.svg#icon-linkedin"></use>
+                                            <use href="./svg/icons.svg#icon-linkedin"></use>
                                         </svg>
                                     </a>
                                 </li>
@@ -279,7 +279,7 @@
                   <img src="./images/port2.jpg" alt="Cashless" width="360">
                     <div class="portfolio-info">
                        <h3 class="portfolio-title">Cashless Payment</h3>
-                          <p class="portfolio-desс">Marketing</p>
+                          <p class="portfolio-desc">Marketing</p>
                     </div>
             </li>
 
@@ -287,7 +287,7 @@
         <img src="./images/port3.jpg" alt="Meditation" width="360">
         <div class="portfolio-info">
         <h3 class="portfolio-title">Meditation App</h3>
-        <p class="portfolio-desс">App</p>
+        <p class="portfolio-desc">App</p>
         </div>
       </li>
 
