--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header class="page-header">
         <div class="container">
             <nav class="header-nav">
-                <a class="logo header-logo" href="./index.html">
+                <a  class="logo header-logo" href="./index.html">
                     Web<span class="logoheader-part">Studio</span>
                 </a>
                 <ul class="nav-list">
@@ -56,7 +56,7 @@
                     <li class="feature-item">
                         <div class="icon-container-two">
                       <svg class="icon-section-two" width="64px" height="64px">
-                        <use href="./svg/icons.svg#icon-strategy">
+                        <use href="./images/icons.svg#icon-strategy">
                         </use>
                       </svg>
                     </div>
@@ -68,7 +68,7 @@
                         <li class="feature-item">
                             <div class="icon-container-two">
                                 <svg class="icon-section-two" width="64px" height="64px">
-                                    <use href="./svg/icons.svg#icon-punctuality">
+                                    <use href="./images/icons.svg#icon-punctuality">
                                     </use>
                                 </svg>
                             </div>
@@ -79,7 +79,7 @@
                     <li class="feature-item">
                         <div class="icon-container-two">
                             <svg class="icon-section-two" width="64px" height="64px">
-                                <use href="./svg/icons.svg#icon-diligence">
+                                <use href="./images/icons.svg#icon-diligence">
                                 </use>
                             </svg>
                         </div>
@@ -90,7 +90,7 @@
                     <li class="feature-item">
                         <div class="icon-container-two">
                             <svg class="icon-section-two" width="64px" height="64px">
-                                <use href="./svg/icons.svg#icon-technologies">
+                                <use href="./images/icons.svg#icon-technologies">
                                 </use>
                             </svg>
                         </div>
@@ -117,28 +117,28 @@
                                <li>
                                 <a>
                                     <svg class="icon-section-thee" width="40px" height="40px">
-                                        <use href="./svg/icons.svg#icon-instagram"></use>
+                                        <use href="./images/icons.svg#icon-instagram"></use>
                                     </svg>
                                 </a>
                                 </li>
                                 <li>
                                 <a>
                                     <svg class="icon-section-thee" width="40px" height="40px">
-                                        <use href="./svg/icons.svg#icon-twitter"></use>
+                                        <use href="./images/icons.svg#icon-twitter"></use>
                                     </svg>
                                 </a>
                                 </li>
                                 <li>
                                 <a>
                                     <svg class="icon-section-thee" width="40px" height="40px">
-                                        <use href="./svg/icons.svg#icon-facebook"></use>
+                                        <use href="./images/icons.svg#icon-facebook"></use>
                                     </svg>
                                 </a>
                                 </li>
                                  <li>
                                 <a>
                                     <svg class="icon-section-thee" width="40px" height="40px">
-                                        <use href="./svg/icons.svg#icon-linkedin"></use>
+                                        <use href="./images/icons.svg#icon-linkedin"></use>
                                     </svg>
                                 </a>
                               </li>
@@ -155,28 +155,28 @@
                             <li>
                                 <a>
                                     <svg class="icon-section-thee" width="40px" height="40px">
-                                        <use href="./svg/icons.svg#icon-instagram"></use>
+                                        <use href="./images/icons.svg#icon-instagram"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li>
                                 <a>
                                     <svg class="icon-section-thee" width="40px" height="40px">
-                                        <use href="./svg/icons.svg#icon-twitter"></use>
+                                        <use href="./images/icons.svg#icon-twitter"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li>
                                 <a>
                                     <svg class="icon-section-thee" width="40px" height="40px">
-                                        <use href="./svg/icons.svg#icon-facebook"></use>
+                                        <use href="./images/icons.svg#icon-facebook"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li>
                                 <a>
                                     <svg class="icon-section-thee" width="40px" height="40px">
-                                        <use href="./svg/icons.svg#icon-linkedin"></use>
+                                        <use href="./images/icons.svg#icon-linkedin"></use>
                                     </svg>
                                 </a>
                             </li>
@@ -192,28 +192,28 @@
                             <li>
                                 <a>
                                     <svg class="icon-section-thee" width="40px" height="40px">
-                                        <use href="./svg/icons.svg#icon-instagram"></use>
+                                        <use href="./images/icons.svg#icon-instagram"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li>
                                 <a>
                                     <svg class="icon-section-thee" width="40px" height="40px">
-                                        <use href="./svg/icons.svg#icon-twitter"></use>
+                                        <use href="./images/icons.svg#icon-twitter"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li>
                                 <a>
                                     <svg class="icon-section-thee" width="40px" height="40px">
-                                        <use href="./svg/icons.svg#icon-facebook"></use>
+                                        <use href="./images/icons.svg#icon-facebook"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li>
                                 <a>
                                     <svg class="icon-section-thee" width="40px" height="40px">
-                                        <use href="./svg/icons.svg#icon-linkedin"></use>
+                                        <use href="./images/icons.svg#icon-linkedin"></use>
                                     </svg>
                                 </a>
                             </li>
@@ -229,28 +229,28 @@
                                 <li>
                                     <a>
                                         <svg class="icon-section-thee" width="40px" height="40px">
-                                            <use href="./svg/icons.svg#icon-instagram"></use>
+                                            <use href="./images/icons.svg#icon-instagram"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li>
                                     <a>
                                         <svg class="icon-section-thee" width="40px" height="40px">
-                                            <use href="./svg/icons.svg#icon-twitter"></use>
+                                            <use href="./images/icons.svg#icon-twitter"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li>
                                     <a>
                                         <svg class="icon-section-thee" width="40px" height="40px">
-                                            <use href="./svg/icons.svg#icon-facebook"></use>
+                                            <use href="./images/icons.svg#icon-facebook"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li>
                                     <a>
                                         <svg class="icon-section-thee" width="40px" height="40px">
-                                            <use href="./svg/icons.svg#icon-linkedin"></use>
+                                            <use href="./images/icons.svg#icon-linkedin"></use>
                                         </svg>
                                     </a>
                                 </li>
