--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
             <div class="container">
                 <h2 class="visually-hidden">Features</h2>
                 <div class="features-list">
+                  <ul class="list-section-two">
                     <li class="feature-item">
                         <div class="icon-container-two">
                       <svg class="icon-section-two" width="64px" height="64px">
@@ -64,7 +65,7 @@
                         <p class="feature-text">Our goal is to identify the business problem to walk away with the perfect and
                             creative solution.</p>
                     </li>
-
+                    
                         <li class="feature-item">
                             <div class="icon-container-two">
                                 <svg class="icon-section-two" width="64px" height="64px">
