--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                   <ul class="list-section-two">
                      <li class="feature-item">
                          <div class="icon-container-two">
-                              <svg class="icon-section-two">
+                              <svg class="icon-section-two" width="64" height="64">
                                 <use href="./images/icons.svg#icon-strategy"></use>
                               </svg>
                          </div>
@@ -66,7 +66,7 @@
                     
                         <li class="feature-item">
                             <div class="icon-container-two">
-                                <svg class="icon-section-two">
+                                <svg class="icon-section-two" width="64" height="64">
                                     <use href="./images/icons.svg#icon-punctuality">
                                     </use>
                                 </svg>
