--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                     
                         <li class="feature-item">
                            <div class="icon-container-two">
-                                <svg class="icon-section-two">
+                                <svg class="icon-section-two" width="64" height="64">
                                   <use href="./images/icons.svg#icon-diligence"></use>
                                 </svg>
                            </div>
@@ -89,7 +89,7 @@
                     
                         <li class="feature-item">
                                <div class="icon-container-two">
-                                      <svg class="icon-section-two">
+                                      <svg class="icon-section-two" width="64" height="64">
                                        <use href="./images/icons.svg#icon-technologies"></use>
                                       </svg>
                                </div>
@@ -116,28 +116,28 @@
                            <ul class="social-items">
                                <li>
                                 <a>
-                                    <svg class="icon-section-thee" width="40px" height="40px">
+                                    <svg class="icon-section-thee" width="40" height="40">
                                         <use href="./images/icons.svg#icon-instagram"></use>
                                     </svg>
                                 </a>
                                 </li>
                                 <li>
                                 <a>
-                                    <svg class="icon-section-thee" width="40px" height="40px">
+                                    <svg class="icon-section-thee" width="40" height="40">
                                         <use href="./images/icons.svg#icon-twitter"></use>
                                     </svg>
                                 </a>
                                 </li>
                                 <li>
                                 <a>
-                                    <svg class="icon-section-thee" width="40px" height="40px">
+                                    <svg class="icon-section-thee" width="40" height="40">
                                         <use href="./images/icons.svg#icon-facebook"></use>
                                     </svg>
                                 </a>
                                 </li>
                                  <li>
                                 <a>
-                                    <svg class="icon-section-thee" width="40px" height="40px">
+                                    <svg class="icon-section-thee" width="40" height="40">
                                         <use href="./images/icons.svg#icon-linkedin"></use>
                                     </svg>
                                 </a>
@@ -154,14 +154,14 @@
                         <ul class="social-items">
                             <li>
                                 <a>
-                                    <svg class="icon-section-thee" width="40px" height="40px">
+                                    <svg class="icon-section-thee" width="40" height="40">
                                         <use href="./images/icons.svg#icon-instagram"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li>
                                 <a>
-                                    <svg class="icon-section-thee" width="40px" height="40px">
+                                    <svg class="icon-section-thee" width="40" height="40">
                                         <use href="./images/icons.svg#icon-twitter"></use>
                                     </svg>
                                 </a>
@@ -175,7 +175,7 @@
                             </li>
                             <li>
                                 <a>
-                                    <svg class="icon-section-thee" width="40px" height="40px">
+                                    <svg class="icon-section-thee" width="40" height="40">
                                         <use href="./images/icons.svg#icon-linkedin"></use>
                                     </svg>
                                 </a>
@@ -191,28 +191,28 @@
                         <ul class="social-items">
                             <li>
                                 <a>
-                                    <svg class="icon-section-thee" width="40px" height="40px">
+                                    <svg class="icon-section-thee" width="40" height="40">
                                         <use href="./images/icons.svg#icon-instagram"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li>
                                 <a>
-                                    <svg class="icon-section-thee" width="40px" height="40px">
+                                    <svg class="icon-section-thee" width="40" height="40">
                                         <use href="./images/icons.svg#icon-twitter"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li>
                                 <a>
-                                    <svg class="icon-section-thee" width="40px" height="40px">
+                                    <svg class="icon-section-thee" width="40" height="40">
                                         <use href="./images/icons.svg#icon-facebook"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li>
                                 <a>
-                                    <svg class="icon-section-thee" width="40px" height="40px">
+                                    <svg class="icon-section-thee" width="40" height="40">
                                         <use href="./images/icons.svg#icon-linkedin"></use>
                                     </svg>
                                 </a>
@@ -228,14 +228,14 @@
                             <ul class="social-items">
                                 <li>
                                     <a>
-                                        <svg class="icon-section-thee" width="40px" height="40px">
+                                        <svg class="icon-section-thee" width="40" height="40">
                                             <use href="./images/icons.svg#icon-instagram"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li>
                                     <a>
-                                        <svg class="icon-section-thee" width="40px" height="40px">
+                                        <svg class="icon-section-thee" width="40" height="40">
                                             <use href="./images/icons.svg#icon-twitter"></use>
                                         </svg>
                                     </a>
