--- a/index.html
+++ b/index.html
@@ -116,28 +116,28 @@
                            <ul class="social-items">
                                <li>
                                 <a>
-                                    <svg class="icon-section-thee" width="40" height="40">
+                                    <svg class="icon-section-thee" width="40px" height="40px">
                                         <use href="./images/icons.svg#icon-instagram"></use>
                                     </svg>
                                 </a>
                                 </li>
                                 <li>
                                 <a>
-                                    <svg class="icon-section-thee" width="40" height="40">
+                                    <svg class="icon-section-thee" width="40px" height="40px">
                                         <use href="./images/icons.svg#icon-twitter"></use>
                                     </svg>
                                 </a>
                                 </li>
                                 <li>
                                 <a>
-                                    <svg class="icon-section-thee" width="40" height="40">
+                                    <svg class="icon-section-thee" width="40px" height="40px">
                                         <use href="./images/icons.svg#icon-facebook"></use>
                                     </svg>
                                 </a>
                                 </li>
                                  <li>
                                 <a>
-                                    <svg class="icon-section-thee" width="40" height="40">
+                                    <svg class="icon-section-thee" width="40px" height="40px">
                                         <use href="./images/icons.svg#icon-linkedin"></use>
                                     </svg>
                                 </a>
