--- a/index.html
+++ b/index.html
@@ -115,28 +115,28 @@
                         <p class="team-role">Product Designer</p>
                            <ul class="social-items">
                                <li>
-                                <a>
+                                <a class="social-link">
                                     <svg class="icon-section-thee" width="16" height="16">
                                         <use href="./images/icons.svg#icon-instagram"></use>
                                     </svg>
                                 </a>
                                 </li>
                                 <li>
-                                <a>
+                                <a class="social-link">
                                     <svg class="icon-section-thee" width="16" height="16">
                                         <use href="./images/icons.svg#icon-twitter"></use>
                                     </svg>
                                 </a>
                                 </li>
                                 <li>
-                                <a>
+                                <a class="social-link">
                                     <svg class="icon-section-thee" width="16" height="16">
                                         <use href="./images/icons.svg#icon-facebook"></use>
                                     </svg>
                                 </a>
                                 </li>
                                  <li>
-                                <a>
+                                <a class="social-link">
                                     <svg class="icon-section-thee" width="16" height="16">
                                         <use href="./images/icons.svg#icon-linkedin"></use>
                                     </svg>
@@ -153,28 +153,28 @@
                          <p class="team-role">Frontend Developer</p>
                         <ul class="social-items">
                             <li>
-                                <a>
+                                <a class="social-link">
                                     <svg class="icon-section-thee" width="16" height="16">
                                         <use href="./images/icons.svg#icon-instagram"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li>
-                                <a>
+                                <a class="social-link">
                                     <svg class="icon-section-thee" width="16" height="16">
                                         <use href="./images/icons.svg#icon-twitter"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li>
-                                <a>
+                                <a class="social-link">
                                     <svg class="icon-section-thee" width="16" height="16">
                                         <use href="./images/icons.svg#icon-facebook"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li>
-                                <a>
+                                <a class="social-link">
                                     <svg class="icon-section-thee" width="16" height="16">
                                         <use href="./images/icons.svg#icon-linkedin"></use>
                                     </svg>
@@ -190,28 +190,28 @@
                         <p class="team-role">Marketing</p>
                         <ul class="social-items">
                             <li>
-                                <a>
+                                <a class="social-link">
                                     <svg class="icon-section-thee" width="16" height="16">
                                         <use href="./images/icons.svg#icon-instagram"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li>
-                                <a>
+                                <a class="social-link">
                                     <svg class="icon-section-thee" width="16" height="16">
                                         <use href="./images/icons.svg#icon-twitter"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li>
-                                <a>
+                                <a class="social-link">
                                     <svg class="icon-section-thee" width="16" height="16">
                                         <use href="./images/icons.svg#icon-facebook"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li>
-                                <a>
+                                <a class="social-link">
                                     <svg class="icon-section-thee" width="16" height="16">
                                         <use href="./images/icons.svg#icon-linkedin"></use>
                                     </svg>
@@ -227,28 +227,28 @@
                         <p class="team-role">UI Designer</p>
                             <ul class="social-items">
                                 <li>
-                                    <a>
+                                    <a class="social-link">
                                         <svg class="icon-section-thee" width="16" height="16">
                                             <use href="./images/icons.svg#icon-instagram"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li>
-                                    <a>
+                                    <a class="social-link">
                                         <svg class="icon-section-thee" width="16" height="16">
                                             <use href="./images/icons.svg#icon-twitter"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li>
-                                    <a>
+                                    <a class="social-link">
                                         <svg class="icon-section-thee" width="16" height="16">
                                             <use href="./images/icons.svg#icon-facebook"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li>
-                                    <a>
+                                    <a class="social-link">
                                         <svg class="icon-section-thee" width="16px" height="16px">
                                             <use href="./images/icons.svg#icon-linkedin"></use>
                                         </svg>
