--- a/index.html
+++ b/index.html
@@ -114,28 +114,28 @@
                         <h3 class="team-name">Mark Guerrero</h3>
                         <p class="team-role">Product Designer</p>
                            <ul class="social-items">
-                               <li>
+                               <li cclass="li-class-3">
                                 <a class="social-link">
                                     <svg class="icon-section-thee" width="16" height="16">
                                         <use href="./images/icons.svg#icon-instagram"></use>
                                     </svg>
                                 </a>
                                 </li>
-                                <li>
+                                <li class="li-class-3">
                                 <a class="social-link">
                                     <svg class="icon-section-thee" width="16" height="16">
                                         <use href="./images/icons.svg#icon-twitter"></use>
                                     </svg>
                                 </a>
                                 </li>
-                                <li>
+                                <li class="li-class-3">
                                 <a class="social-link">
                                     <svg class="icon-section-thee" width="16" height="16">
                                         <use href="./images/icons.svg#icon-facebook"></use>
                                     </svg>
                                 </a>
                                 </li>
-                                 <li>
+                                 <li class="li-class-3">
                                 <a class="social-link">
                                     <svg class="icon-section-thee" width="16" height="16">
                                         <use href="./images/icons.svg#icon-linkedin"></use>
@@ -152,28 +152,28 @@
                         <h3 class="team-name">Tom Ford</h3>
                          <p class="team-role">Frontend Developer</p>
                         <ul class="social-items">
-                            <li>
+                            <li class="li-class-3">
                                 <a class="social-link">
                                     <svg class="icon-section-thee" width="16" height="16">
                                         <use href="./images/icons.svg#icon-instagram"></use>
                                     </svg>
                                 </a>
                             </li>
-                            <li>
+                            <li class="li-class-3">
                                 <a class="social-link">
                                     <svg class="icon-section-thee" width="16" height="16">
                                         <use href="./images/icons.svg#icon-twitter"></use>
                                     </svg>
                                 </a>
                             </li>
-                            <li>
+                            <li class="li-class-3">
                                 <a class="social-link">
                                     <svg class="icon-section-thee" width="16" height="16">
                                         <use href="./images/icons.svg#icon-facebook"></use>
                                     </svg>
                                 </a>
                             </li>
-                            <li>
+                            <li class="li-class-3">
                                 <a class="social-link">
                                     <svg class="icon-section-thee" width="16" height="16">
                                         <use href="./images/icons.svg#icon-linkedin"></use>
@@ -189,34 +189,34 @@
                         <h3 class="team-name">Camila Garcia</h3>
                         <p class="team-role">Marketing</p>
                         <ul class="social-items">
-                            <li>
+                            <li class="li-class-3">
                                 <a class="social-link">
                                     <svg class="icon-section-thee" width="16" height="16">
                                         <use href="./images/icons.svg#icon-instagram"></use>
                                     </svg>
                                 </a>
                             </li>
-                            <li>
+                            <li class="li-class-3">
                                 <a class="social-link">
                                     <svg class="icon-section-thee" width="16" height="16">
                                         <use href="./images/icons.svg#icon-twitter"></use>
                                     </svg>
                                 </a>
                             </li>
-                            <li>
+                            <li class="li-class-3">
                                 <a class="social-link">
                                     <svg class="icon-section-thee" width="16" height="16">
                                         <use href="./images/icons.svg#icon-facebook"></use>
                                     </svg>
                                 </a>
                             </li>
-                            <li>
+                            <li class="li-class-3">
                                 <a class="social-link">
                                     <svg class="icon-section-thee" width="16" height="16">
                                         <use href="./images/icons.svg#icon-linkedin"></use>
                                     </svg>
                                 </a>
-                            </li>
+                            </li class="li-class-3">
                         </ul>
                     </div>
                 </li>
@@ -226,28 +226,28 @@
                         <h3 class="team-name">Daniel Wilson</h3>
                         <p class="team-role">UI Designer</p>
                             <ul class="social-items">
-                                <li>
+                                <li class="li-class-3">
                                     <a class="social-link">
                                         <svg class="icon-section-thee" width="16" height="16">
                                             <use href="./images/icons.svg#icon-instagram"></use>
                                         </svg>
                                     </a>
                                 </li>
-                                <li>
+                                <li class="li-class-3">
                                     <a class="social-link">
                                         <svg class="icon-section-thee" width="16" height="16">
                                             <use href="./images/icons.svg#icon-twitter"></use>
                                         </svg>
                                     </a>
                                 </li>
-                                <li>
+                                <li class="li-class-3">
                                     <a class="social-link">
                                         <svg class="icon-section-thee" width="16" height="16">
                                             <use href="./images/icons.svg#icon-facebook"></use>
                                         </svg>
                                     </a>
                                 </li>
-                                <li>
+                                <li class="li-class-3">
                                     <a class="social-link">
                                         <svg class="icon-section-thee" width="16px" height="16px">
                                             <use href="./images/icons.svg#icon-linkedin"></use>
