--- a/index.html
+++ b/index.html
@@ -267,29 +267,29 @@
     <div class="container"> 
              <h2 class="portfolio">Our Portfolio</h2>
                <ul class="portfolio-list">
-                <li class="portfolio-item">
-                  <img src="./images/port1.jpg" alt="application" width="360">
-                    <div  class="portfolio-info">
-                        <h3 class="portfolio-title">Banking App</h3>
-                           <p class="portfolio-desc">App</p>
-                    </div>
-                </li>
+                        <li class="portfolio-item">
+                          <img src="./images/port1.jpg" alt="application" width="360">
+                           <div  class="portfolio-info">
+                              <h3 class="portfolio-title">Banking App</h3>
+                                <p class="portfolio-desc">App</p>
+                           </div>
+                        </li>
 
-            <li class="portfolio-item">
-                  <img src="./images/port2.jpg" alt="Cashless" width="360">
-                    <div class="portfolio-info">
-                       <h3 class="portfolio-title">Cashless Payment</h3>
-                          <p class="portfolio-desc">Marketing</p>
-                    </div>
-            </li>
+                         <li class="portfolio-item">
+                           <img src="./images/port2.jpg" alt="Cashless" width="360">
+                             <div class="portfolio-info">
+                                 <h3 class="portfolio-title">Cashless Payment</h3>
+                                <p class="portfolio-desc">Marketing</p>
+                             </div>
+                         </li>
 
-  <li class="portfolio-item">
-        <img src="./images/port3.jpg" alt="Meditation" width="360">
-        <div class="portfolio-info">
-        <h3 class="portfolio-title">Meditation App</h3>
-        <p class="portfolio-desc">App</p>
-        </div>
-      </li>
+                         <li class="portfolio-item">
+                              <img src="./images/port3.jpg" alt="Meditation" width="360">
+                                  <div class="portfolio-info">
+                                     <h3 class="portfolio-title">Meditation App</h3>
+                                       <p class="portfolio-desc">App</p>
+                                  </div>
+                          </li>
 
 <li class="portfolio-item">
     <img src="./images/port4.jpg" alt="Taxi Service" width="360">
@@ -328,6 +328,40 @@
                 sales for your business with digital
                 marketing & growth solutions.
             </p>
+        </div>
+
+<div class="footer-social" > 
+    <p class="footer-text">Social media</p>
+        <ul class="social-items">
+            <li>
+                <a class="social-link">
+                    <svg class="icon-section-thee" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                </a>
+            </li>
+            <li>
+                <a class="social-link">
+                    <svg class="icon-section-thee" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                </a>
+            </li>
+            <li>
+                <a class="social-link">
+                    <svg class="icon-section-thee" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                </a>
+            </li>
+            <li>
+                <a class="social-link">
+                    <svg class="icon-section-thee" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                </a>
+            </li>
+        </ul>
         </div>
     </footer>
 
