--- a/index.html
+++ b/index.html
@@ -328,40 +328,40 @@
                 sales for your business with digital
                 marketing & growth solutions.
             </p>
-        </div>
-
-<div class="footer-social" > 
-    <p class="footer-text">Social media</p>
-        <ul class="social-items">
-            <li>
-                <a class="social-link">
-                    <svg class="icon-section-thee" width="16" height="16">
+        
+                <div class="footer-social" > 
+                   <p class="footer-text">Social media</p>
+                     <ul class="social-items">
+                       <li class="footter-social-list" >
+                        <a class="social-link">
+                        <svg class="icon-section-footer" width="24" height="24">
                         <use href="./images/icons.svg#icon-instagram"></use>
                     </svg>
                 </a>
             </li>
             <li>
                 <a class="social-link">
-                    <svg class="icon-section-thee" width="16" height="16">
+                    <svg class="icon-section-footer" width="24" height="24">
                         <use href="./images/icons.svg#icon-twitter"></use>
                     </svg>
                 </a>
             </li>
             <li>
                 <a class="social-link">
-                    <svg class="icon-section-thee" width="16" height="16">
+                    <svg class="icon-section-footer" width="24" height="24">
                         <use href="./images/icons.svg#icon-facebook"></use>
                     </svg>
                 </a>
             </li>
             <li>
                 <a class="social-link">
-                    <svg class="icon-section-thee" width="16" height="16">
+                    <svg class="icon-section-footer" width="24" height="24">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                     </svg>
                 </a>
             </li>
         </ul>
+        </div>
         </div>
     </footer>
 
