--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
         
                 <div class="footer-social" > 
                    <p class="footer-text">Social media</p>
-                     <ul class="social-items">
+                     <ul class="social-items-footer">
                        <li class="footter-social-list" >
                         <a class="social-link">
                         <svg class="icon-section-footer" width="24" height="24">
