--- a/index.html
+++ b/index.html
@@ -330,31 +330,31 @@
             </p>
         
                 <div class="footer-social" > 
-                   <p class="footer-text">Social media</p>
+                   <p class="footer-text-social">Social media</p>
                      <ul class="social-items-footer">
                        <li class="footter-social-list" >
-                        <a class="social-link">
+                        <a class="social-link" href="#a">
                         <svg class="icon-section-footer" width="24" height="24">
                         <use href="./images/icons.svg#icon-instagram"></use>
                     </svg>
                 </a>
             </li>
-            <li>
-                <a class="social-link">
+            <li class="footter-social-list">
+                <a class="social-link" href="#a">
                     <svg class="icon-section-footer" width="24" height="24">
                         <use href="./images/icons.svg#icon-twitter"></use>
                     </svg>
                 </a>
             </li>
-            <li>
-                <a class="social-link">
+            <li class="footter-social-list">
+                <a class="social-link" href="#a">
                     <svg class="icon-section-footer" width="24" height="24">
                         <use href="./images/icons.svg#icon-facebook"></use>
                     </svg>
                 </a>
             </li>
-            <li>
-                <a class="social-link">
+            <li class="footter-social-list">
+                <a class="social-link" href="#">
                     <svg class="icon-section-footer" width="24" height="24">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                     </svg>
