--- a/index.html
+++ b/index.html
@@ -333,28 +333,28 @@
                    <p class="footer-text-social">Social media</p>
                      <ul class="social-items-footer">
                        <li class="footter-social-list" >
-                        <a class="social-link" href="#a">
+                        <a class="social-link-footer" href="#a">
                         <svg class="icon-section-footer" width="24" height="24">
                         <use href="./images/icons.svg#icon-instagram"></use>
                     </svg>
                 </a>
             </li>
             <li class="footter-social-list">
-                <a class="social-link" href="#a">
+                <a class="social-link-footer" href="#a">
                     <svg class="icon-section-footer" width="24" height="24">
                         <use href="./images/icons.svg#icon-twitter"></use>
                     </svg>
                 </a>
             </li>
             <li class="footter-social-list">
-                <a class="social-link" href="#a">
+                <a class="social-link-footer" href="#a">
                     <svg class="icon-section-footer" width="24" height="24">
                         <use href="./images/icons.svg#icon-facebook"></use>
                     </svg>
                 </a>
             </li>
             <li class="footter-social-list">
-                <a class="social-link" href="#">
+                <a class="social-link-footer" href="#">
                     <svg class="icon-section-footer" width="24" height="24">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                     </svg>
