--- a/index.html
+++ b/index.html
@@ -280,7 +280,13 @@
                              <div class="portfolio-info">
                                  <h3 class="portfolio-title">Cashless Payment</h3>
                                 <p class="portfolio-desc">Marketing</p>
+                             <div class="overlay">
+                                <p>14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
+                                Cloud Storage App</p>
                              </div>
+
+                            </div>
+                           
                          </li>
 
                          <li class="portfolio-item">
@@ -330,7 +336,8 @@
             </p>
         
                 <div class="footer-social" > 
-                   <p class="footer-text-social">Social media</p>
+                   <p class="footer-text-social">Social media
+                   </p>
                      <ul class="social-items-footer">
                        <li class="footer-social-list" >
                         <a class="social-link-footer" href="#a">
