--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
                                  <h3 class="portfolio-title">Cashless Payment</h3>
                                 <p class="portfolio-desc">Marketing</p>
                              <div class="overlay">
-                                <p>14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
+                                <p class="overlay-p">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
                                 Cloud Storage App</p>
                              </div>
 
