--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
                 marketing & growth solutions.
             </p>
         </div>
-             <div>
+             <div class="icon">
             <p class="footer-text-social">Social media
             </p>
             <ul class="social-items-footer">
