--- a/index.html
+++ b/index.html
@@ -267,29 +267,41 @@
              <h2 class="portfolio">Our Portfolio</h2>
                <ul class="portfolio-list">
                         <li class="portfolio-item">
+                    <div class="portfolio-image-wrapper">
                           <img src="./images/port1.jpg" alt="application" width="360">
-                           <div  class="portfolio-info">
+                          <p class="overlay-text">
+                            14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
+                            Cloud Storage App
+                            </p>
+                    </div>
+                          <div  class="portfolio-info">
                               <h3 class="portfolio-title">Banking App</h3>
                                 <p class="portfolio-desc">App</p>
                            </div>
                         </li>
+<li class="portfolio-item">
+    <div class="portfolio-image-wrapper">
+        <img src="./images/port2.jpg" alt="Cashless" width="360">
+        <p class="overlay-text">
+            14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit
+            Ecommerce App · Cloud Storage App
+        </p>
+    </div>
+    <div class="portfolio-info">
+        <h3 class="portfolio-title">Cashless Payment</h3>
+        <p class="portfolio-desc">Marketing</p>
+    </div>
+</li>
+                         
 
                          <li class="portfolio-item">
-                           <img src="./images/port2.jpg" alt="Cashless" width="360">
-                             <div class="portfolio-info">
-                                 <h3 class="portfolio-title">Cashless Payment</h3>
-                                <p class="portfolio-desc">Marketing</p>
-                             <div class="overlay">
-                                <p class="overlay-p">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
-                                Cloud Storage App</p>
-                             </div>
-
-                            </div>
-                           
-                         </li>
-
-                         <li class="portfolio-item">
-                              <img src="./images/port3.jpg" alt="Meditation" width="360">
+                            <div class="portfolio-image-wrapper">
+                                  <img src="./images/port3.jpg" alt="Meditation" width="360">
+                                <p class="overlay-text">
+                                14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit
+                                Ecommerce App · Cloud Storage App
+                                </p>
+                                </div>
                                   <div class="portfolio-info">
                                      <h3 class="portfolio-title">Meditation App</h3>
                                        <p class="portfolio-desc">App</p>
@@ -297,7 +309,13 @@
                           </li>
 
 <li class="portfolio-item">
+    <div class="portfolio-image-wrapper">
     <img src="./images/port4.jpg" alt="Taxi Service" width="360">
+    <p class="overlay-text">
+        14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit
+        Ecommerce App · Cloud Storage App
+    </p>
+    </div>
     <div class="portfolio-info">
     <h3 class="portfolio-title">Taxi Service</h3>
     <p class="portfolio-desc">Marketing</p>
@@ -305,20 +323,34 @@
 </li>
 
 <li class="portfolio-item">
+    <div class="portfolio-image-wrapper">
     <img src="./images/port5.jpg" alt="Illustrations" width="360">
+    <p class="overlay-text">
+        14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit
+        Ecommerce App · Cloud Storage App
+    </p>
+    </div>
     <div class="portfolio-info">
+        <div class="portfolio-image-wrapper">
     <h3 class="portfolio-title">Screen Illustrations</h3>
     <p class="portfolio-desc">Design</p>
     </div>
 </li>
 
-<li class="portfolio-item">
-    <img src="./images/port6.jpg" alt="Courses" width="360">
-    <div class="portfolio-info">
-    <h3 class="portfolio-title">Online Courses</h3>
-    <p class="portfolio-desc">Marketing</p>
-</div>
-</li>
+      <li class="portfolio-item">
+      <div class="portfolio-image-wrapper">
+       <img src="./images/port6.jpg" alt="Courses" width="360">
+        <p class="overlay-text">
+        14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit
+        Ecommerce App · Cloud Storage App
+        </p>
+          </div>    
+          <div class="portfolio-info">       
+         <h3 class="portfolio-title">Online Courses</h3>
+           <p class="portfolio-desc">Marketing</p>
+         </div>
+        </li>
+
 </ul>
 </div>
 </section>
